@@ -370,16 +370,16 @@ EOT
   my $obj = Text::Table::Read::RelationOn::Tiny->new();
       my $input = <<'EOT';
 
-| x\y   | this | that |  -blah | -    |
-|-------+------+------+--------+------|
-| this  | X    |      | X      |  X   |
-|-------+------+------+--------+------|
-| that  |      |      | X      |      |
-|-------+------+------+--------+------|
-| -blah |      | X    |        |      |
-|-------+------+------+--------+------|
-|  -    |      |      |        |      |
-|-------+------+------+--------+------|
+| x\y   | this | that |-blah   |-    |
+|-------+------+------+--------+-----|
+| this  | X    |      | X      |  X  |
+|-------+------+------+--------+-----|
+| that  |      |      | X      |     |
+|-------+------+------+--------+-----|
+| -blah |      | X    |        |     |
+|-------+------+------+--------+-----|
+| -     |      |      |        |     |
+|-------+------+------+--------+-----|
 
 EOT
 #Don't append a semicolon to the line above!
